py2o2/src/parser/snapshots/py2o2__parser__function_def__test__parse_arg-4.snap
---
source: py2o2/src/parser/function_def.rs
expression: "arg(\"a = None\").finish().unwrap()"
---
(
    "",
    Arg {
        name: "a",
        ty: None,
        default: Some(
            None,
        ),
    },
)
