py2o2/src/parser/snapshots/py2o2__parser__function_def__test__parse_function_def-3.snap
---
source: py2o2/src/parser/function_def.rs
expression: "function_def(r#\"\n            def g(*args) -> str:\n                ...\n            \"#.trim()).finish().unwrap()"
---
(
    "",
    FunctionDef {
        name: "g",
        args: Arguments {
            args: [],
            positional_only: [],
            keyword_only: [],
            var_args: Some(
                Arg {
                    name: "args",
                    ty: None,
                    default: None,
                },
            ),
            kw_args: None,
        },
        type_: Name(
            "str",
        ),
        decorators: [],
    },
)
