py2o2/src/parser/snapshots/py2o2__parser__function_def__test__parse_function_def-6.snap
---
source: py2o2/src/parser/function_def.rs
expression: "function_def(r#\"\n            def f(x, *, a=1):\n                ...\n            \"#.trim()).finish().unwrap()"
---
(
    "",
    FunctionDef {
        name: "f",
        args: Arguments {
            args: [
                Arg {
                    name: "x",
                    ty: None,
                    default: None,
                },
            ],
            positional_only: [],
            keyword_only: [
                Arg {
                    name: "a",
                    ty: None,
                    default: Some(
                        Constant {
                            value: Float(
                                1.0,
                            ),
                        },
                    ),
                },
            ],
            var_args: None,
            kw_args: None,
        },
        type_: None,
    },
)
