py2o2/src/parser/snapshots/py2o2__parser__function_def__test__parse_function_def-8.snap
---
source: py2o2/src/parser/function_def.rs
expression: "function_def(r#\"\n            @staticmethod\n            def f(a, b):\n                ...\n            \"#.trim()).finish().unwrap()"
---
(
    "",
    FunctionDef {
        name: "f",
        args: Arguments {
            args: [
                Arg {
                    name: "a",
                    ty: None,
                    default: None,
                },
                Arg {
                    name: "b",
                    ty: None,
                    default: None,
                },
            ],
            positional_only: [],
            keyword_only: [],
            var_args: None,
            kw_args: None,
        },
        type_: None,
        decorators: [
            Name {
                id: "staticmethod",
            },
        ],
    },
)
